// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders jméno sestupně 1`] = `
<button
  className="SortHeader"
  onClick={[Function]}
>
  jméno
   
  ↓
</button>
`;

exports[`renders the default 1`] = `
<button
  className="SortHeader"
  onClick={[Function]}
>
  příjmení
   
  
</button>
`;
